# tube2lora

./: .gitignore  LICENSE  README.md  pyproject.toml  tube2lora.yaml.example
configs/: default.yaml  video_essay.yaml
configs/examples/: single_video_smoke.yaml  url_file_local_llm.yaml  video_essay_smoke_small.yaml  voxtral.yaml
configs/prompts/: editorial_rewrite_default.yaml  normalize_default.yaml  talk_as_creator_default.yaml  video_essay_example.yaml
tube2lora/: cli.py  config.py  pipeline.py
tube2lora/cache/: manager.py
tube2lora/llm/: client.py
tube2lora/stages/: __init__.py  analyze.py  common.py  download.py  evaluate.py  filter.py  generate.py  normalize.py  train.py  transcribe.py
tube2lora/transcribe/: backends.py
tube2lora/utils/: hashing.py  io.py  logging.py  text_metrics.py
