[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "tube2lora"
version = "0.1.0"
description = "Config-driven YouTube-to-LoRA pipeline focused on Mistral models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "tube2lora contributors" }
]
dependencies = [
  "typer>=0.12.5",
  "pydantic>=2.8.0",
  "PyYAML>=6.0.1",
  "openai>=1.55.0",
  "yt-dlp>=2025.1.0",
  "youtube-transcript-api>=0.6.2",
  "tqdm>=4.66.5",
  "faster-whisper>=1.1.0",
  "langdetect>=1.0.9",
  "datasketch>=1.6.5",
  "tiktoken>=0.8.0",
  "textstat>=0.7.4",
  "datasets>=3.0.0",
  "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.9",
  "pytest>=8.3.0",
  "mypy>=1.11.0",
  "types-PyYAML>=6.0.12.20240917",
]
train = [
  "torch>=2.4.0",
  "transformers>=4.48.0",
  "accelerate>=1.0.1",
  "peft>=0.12.0",
  "tensorboard>=2.18.0",
  "unsloth>=2025.2.0",
]

[project.scripts]
tube2lora = "tube2lora.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["tube2lora"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
pythonpath = ["."]
